<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout
    tools:context="com.example.svetlana.androidlabs2.StartActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:text="@string/hello_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/button"
        android:text="@string/ButtonText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/chatButton"
        android:text="@string/chatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="17dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/weatherButton"
        android:text="@string/weatherButton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chatButton"
        android:layout_alignEnd="@+id/chatButton"
        android:layout_marginTop="14dp"/>

</android.support.constraint.ConstraintLayout>
