<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    tools:context="com.example.svetlana.androidlabs2.LoginActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:hint="login name"
        android:inputType="textEmailAddress"
        android:id="@+id/emailInput"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/password"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:hint="password"
        android:inputType="textPassword"
        android:id="@+id/passInput"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="183dp"
        android:text="@string/LoginButton"
        android:id="@+id/loginButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <!--android.onClick="showStart"/>-->

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:src="@drawable/flag"
        android:contentDescription="@drawable/flag"/>

</LinearLayout>
